data/derived/sp14/progs/unify/prog0532.ml.out
Characters 28-46:
  let _ = additivePersAndRoot (9::(8::(7::[6]))) 0;;
                              ^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
